--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -33,6 +33,7 @@
 \item[INLA] Integrated Nested Laplace Approximation.
 \item[GP] Gaussian Process.
 \item[CAR] Conditionally Auto-regressive.
+\item[ICAR] Intrisic Conditionally Auto-regressive.
 \item[ART] Antiretroviral Therapy.
 \item[SAE] Small-Area Estimation.
 \item[GMRF] Gaussian Markov Random Field.
@@ -41,5 +42,10 @@
 \item[HMC] Hamiltonian Monte Carlo.
 \item[LGM] Latent Gaussian Model.
 \item[ELGM] Extended Latent Gaussian Model.
+\item[DIC] Deviance Information Criterion.
+\item[BIC] Bayesian Information Criterion.
+\item[WAIC] Watanabe-Akaike Information Criterion.
+\item[ESS] Effective Sample Size.
+\item[IID] Independent and Identically Distributed.
 
 \end{mclistof} 
