--- a/front-and-back-matter/notations.tex
+++ b/front-and-back-matter/notations.tex
@@ -7,11 +7,11 @@
 \item[$s \in \mathcal{S}$] Point location.
 \item[$\mathcal{T}$] Temporal study period $\mathcal{T} \subseteq \mathbb{R}$.
 \item[$t \in \mathcal{T}$] Time.
-\item[$\y$] Data, a $n$-vector.
+\item[$\y$] Data, a $n$-vector $(y_1, \ldots, y_n)$.
 \item[$\bphi$] Parameters, a $d$-vector $(\phi_1, \ldots, \phi_d)$.
 \item[$\x$] Latent field, a $N$-vector $(x_1, \ldots, x_N)$.
 \item[$\btheta$] Hyperparameters, a $m$-vector $(\theta_1, \ldots, \theta_m)$.
-\item[$x \sim p(x)$] $x$ is distributed according to $p(x)$.
+\item[$x \sim p(x)$] $x$ has the probability distribution $p(x)$.
 \item[$A_i$] Areal unit.
 \item[$A_i \sim A_j$] Adjacency between areal units.
 \item[$\mathbf{H}$] Hessian matrix.
