--- a/references.bib
+++ b/references.bib
@@ -1486,3 +1486,34 @@ doi = {10.1201/9781420072884-c30}
   publisher={Wiley Online Library}
 }
 
+@article{jackel2005note,
+  title={A note on multivariate Gauss-Hermite quadrature},
+  author={J{\"a}ckel, Peter},
+  journal={London: ABN-Amro. Re},
+  year={2005}
+}
+
+@article{metropolis1953equation,
+  title={Equation of state calculations by fast computing machines},
+  author={Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth, Marshall N and Teller, Augusta H and Teller, Edward},
+  journal={The journal of chemical physics},
+  volume={21},
+  number={6},
+  pages={1087--1092},
+  year={1953},
+  publisher={AIP}
+}
+
+@article{hastings1970monte,
+  title={Monte Carlo sampling methods using Markov chains and their applications},
+  author={Hastings, W Keith},
+  year={1970},
+  publisher={Oxford University Press}
+}
+
+@book{hyndman2018forecasting,
+  title={Forecasting: principles and practice},
+  author={Hyndman, Rob J and Athanasopoulos, George},
+  year={2018},
+  publisher={OTexts}
+}
